# mini-me

./: .dockerignore  .env.example  .gitignore  .mise.toml  .sops.yaml  Cargo.toml  Dockerfile  README.md  dev.docker-compose.yml  docker-compose.yml  justfile  prod.secrets.yml  rust-toolchain.toml  rustfmt.toml  rusty-hook.toml  sqlx-data.json
data/db/: dev.db
migrations/: 20210618044520_dynamic_commands.down.sql  20210618044520_dynamic_commands.up.sql  20210618044523_guild_data.down.sql  20210618044523_guild_data.up.sql  20210618185007_guild_date_add_dynamic_prefix.down.sql  20210618185007_guild_date_add_dynamic_prefix.up.sql  20211007220156_dynamic_commands_add_attachments.down.sql  20211007220156_dynamic_commands_add_attachments.up.sql
src/: censor.rs  db.rs  main.rs  models.rs
src/commands/: age.rs  meta.rs  mod.rs  owner.rs  schizo.rs  uwu.rs  wordle.rs
src/commands/command/: add.rs  get.rs  mod.rs  remove.rs  rename.rs  update.rs
